# clamor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  external.md  flake.nix  install.py  justfile  metadata.json
.claude/tasks/: review-skill.md
agents/claude-code/: install.py  manifest.yaml
agents/open-code/: install.py
agents/pi/: README.md  install.py  manifest.yaml  prompt.md  teams.template.yaml
agents/pi-quick/: manifest.yaml  prompt.md
agents/pi-standard/: manifest.yaml  prompt.md
agents/pi-team/: manifest.yaml  prompt.md
common/: agentic-kit.md  bug-reports.md  cli-tools.md  code-conventions.md  code-style.md  commands.md  comments.md  communication-style.md  dev-resuming-projects.md  dev-workflow.md  documentation.md  git-work.md  git.md  orchestration.md  quality.md  skills.md  tmp.md  workspace.md
extensions/pi/: README.md  (+1 more)
hooks/: README.md  clamor  fleet  hook.sh  hooks.json
hooks/link-proxy/: README.md  domains.txt.template  hook.sh  hooks.json  main.py  proxy.py  pyproject.toml  secrets.py  start-proxy.sh  test_link_proxy.py
hooks/link-proxy/tests/: __init__.py  conftest.py  test_persistence.py  test_proxy.py  test_secrets.py  test_transforms.py
lib/: install_types.py  install_utils.py
scripts/: test-preset.sh
src/: agent.rs  cli.rs  client.rs  config.rs  daemon.rs  hook.rs  log.rs  main.rs  mock_agent.rs  pane.rs  picker.rs  protocol.rs  set_state.rs  spawn.rs  state.rs  watcher.rs
tests/: integration.rs  test_agent_installers.py  test_hooks.py  test_install.py  test_notification.py  test_transcribe.py  test_workspace.py  test_youtube.py
tmp/: ux-improvements.md  ux-issues.md
tools/fleet/: Cargo.toml  README.md  justfile  metadata.json
tools/fleet/hooks/: hook.sh
tools/fleet/src/: agent.rs  cli.rs  client.rs  config.rs  daemon.rs  hook.rs  main.rs  mock_agent.rs  pane.rs  picker.rs  protocol.rs  spawn.rs  state.rs  tmux.rs  watcher.rs
tools/fleet/src/dashboard/: input.rs  keys.rs  mod.rs  render.rs
tools/fleet/tests/: integration.rs
(+311 files in other folders)
